--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@
 * {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+  font-family: "Inter", sans-serif;
 }
